Fix send button padding on mobile due to font auto-sizing

--- a/assets/index.scss
+++ b/assets/index.scss
@@ -283,7 +283,7 @@ main {
         text-transform: uppercase;
         border: 1px solid var(--background-color-dark-theme);
         border-radius: 5em;
-        padding: .5rem 2rem;
+        padding: .5em 2em;
         width: auto;
         @include font-weight(700);
         letter-spacing: .1em;
